--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: cpp
 install:
   - sudo apt-get update
   - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev libsdl2-2.0-0 libsdl2-dev libsdl2-image-2.0-0 libsdl2-image-dev libsdl2-ttf-2.0-0 libsdl2-ttf-dev libsdl2-mixer-2.0-0 libsdl2-mixer-dev -y
+  - ./cpplint include/* src/*
 compiler:
    - g++
 script:
