--- a/test/Makefile
+++ b/test/Makefile
@@ -48,7 +48,7 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/joaorobson/Documentos/Wenova/test
+CMAKE_SOURCE_DIR = /Wenova/test
 
 # The top-level build directory on which CMake was run.
 CMAKE_BINARY_DIR = /home/joaorobson/Documentos/Wenova/test
