--- a/test/Makefile
+++ b/test/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /Wenova/test
+CMAKE_SOURCE_DIR = /home/travis/build/joaorobson/Wenova/test
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/joaorobson/Documentos/Wenova/test
+CMAKE_BINARY_DIR = /home/travis/build/joaorobson/Wenova
 
 #=============================================================================
 # Targets provided globally by CMake.
