--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ compiler:
    - g++
 script:
   - cd test
-  - cmake CMakeLists.txt 
-  - make  
+  - sudo cmake CMakeLists.txt 
+  - sudo make  
   - runTests
