--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ language: cpp
 
 install:
   - sudo apt-get update
-  - sudo apt-get install cppcheck
-  - sudo apt-get install cccc
+  - sudo apt-get install cppcheck cccc clang-format-3.8
   - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev libsdl2-2.0-0 libsdl2-dev libsdl2-image-2.0-0 libsdl2-image-dev libsdl2-ttf-2.0-0 libsdl2-ttf-dev libsdl2-mixer-2.0-0 libsdl2-mixer-dev -y
+  - clang-format-3.8 src/*.cpp -output-replacements-xml=1 | (! grep offset) > /dev/null || (echo "Some file(s) don't match this project .clang-format specifications, format your files according to this project style-sheet." && $(exit 1))
   - ./cpplint include/* src/*
   - SDL_PATH=$(sdl2-config --clags)
   - cppcheck --enable=all --std=c++11 -I./include --suppress=missingIncludeSystem --suppress=missingInclude --error-exitcode=1 src/*.cpp
