--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev libsdl2-2.0-0 libsdl2-dev libsdl2-image-2.0-0 libsdl2-image-dev libsdl2-ttf-2.0-0 libsdl2-ttf-dev libsdl2-mixer-2.0-0 libsdl2-mixer-dev -y
   - clang-format-3.8 include/*.h src/*.cpp -output-replacements-xml=1 | (! grep offset) > /dev/null || (echo "Some file(s) don't match this project .clang-format specifications, format your files according to this project style-sheet." && $(exit 1))
   - ./cpplint include/* src/*
-  - SDL_PATH=$(sdl2-config --clags)
+  - SDL_PATH=$(sdl2-config --cflags)
   - cppcheck --enable=all --std=c++11 -I./include --suppress=missingIncludeSystem --suppress=missingInclude --error-exitcode=1 src/*.cpp
   - cccc src/*.cpp
 compiler:
